{
    "name": "CustomInput",
    "maps": [
        {
            "name": "PlayerOverworld",
            "id": "aa1fa688-aac2-4499-ab02-8554ce60edcd",
            "actions": [
                {
                    "name": "CameraRotation",
                    "type": "Value",
                    "id": "dff37f5a-da88-4acd-b38b-7b7960923134",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraZoom",
                    "type": "Value",
                    "id": "198356de-a62e-4ee9-bb41-41c8a049cf70",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SingleClickToMove",
                    "type": "Button",
                    "id": "69aed299-33fc-47fa-a270-a1d982e95850",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "7feca25b-ab3d-4f2e-a9f7-184fbe1a97ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraEnableRotation",
                    "type": "Button",
                    "id": "5ece4653-4a4b-4502-b070-11817bae5dcb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e314d9e4-7fbf-4252-b066-058774cb56cb",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc7e9b98-53cc-490e-81e5-eb481544c19e",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraZoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d41245c5-bfef-459d-9851-67b1906ba898",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SingleClickToMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d028fb2-aadb-4378-a3d3-4e703d154250",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6749a4c-36e6-44cf-b35b-8ffd6a341987",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraEnableRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}